# dayu-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci-mainline.yml  ci-pr-extended.yml  ci-pr-required.yml  ci.yml  release-offline.yml
constraints/: lock-common-py311.txt  lock-linux-x64-py311.txt  lock-macos-arm64-py311.txt  lock-macos-x64-py311.txt  lock-windows-x64-py311.txt  min-py311.txt
dayu/: README.md  console_output.py  docling_runtime.py  file_lock.py  log.py  process_liveness.py  tool_limits.py  workspace_paths.py
dayu/assets/: 定性分析模板.md
dayu/cli/: __init__.py  arg_parsing.py  command_names.py  conversation_label_locks.py  conversation_labels.py  dependency_setup.py  graceful_shutdown.py  init_command.py  interactive_state.py  interactive_ui.py  labeled_conversations.py  main.py
dayu/config/: README.md  llm_models.json
dayu/contracts/: agent_execution.py  agent_execution_serialization.py  env_keys.py  events.py  execution_options.py  host_execution.py  model_config.py  protocols.py  run.py  runtime_config_snapshot.py  session.py  tool_configs.py  toolset_config.py
dayu/engine/: README.md  __init__.py  async_agent.py  async_cli_runner.py  async_openai_runner.py  cancellation.py  context_budget.py  doc_access_policy.py  events.py  protocols.py  runner_factory.py  sse_parser.py  tool_registry.py  tool_trace.py  toolset_registrars.py  truncation_manager.py
dayu/execution/: __init__.py  cli_execution_options.py  options.py  runtime_config.py
dayu/fins/: README.md  _converters.py  active_6k_retriage.py  cli.py  cli_formatters.py  cli_support.py  ground_truth_baseline.py  service_runtime.py  ticker_normalization.py  toolset_registrars.py
dayu/host/: README.md  __init__.py  _datetime_utils.py  _session_barrier.py  agent_builder.py  cancellation_bridge.py  concurrency.py  conversation_memory.py  conversation_runtime.py  conversation_store.py  event_bus.py  events.py  executor.py  host.py  host_cleanup.py  host_execution.py  host_store.py  pending_turn_store.py  prepared_turn.py  protocols.py  reply_outbox_store.py  run_registry.py  scene_preparer.py  session_registry.py
dayu/prompting/: prompt_renderer.py  scene_definition.py
dayu/render/: render.py
dayu/services/: __init__.py  chat_service.py  concurrency_lanes.py  contract_preparation.py  contracts.py  fins_service.py  host_admin_service.py  pending_turns.py  prompt_contributions.py  prompt_service.py  protocols.py  scene_execution_acceptance.py  startup_preparation.py  startup_recovery.py  write_service.py
dayu/startup/: config_file_resolver.py  config_loader.py  workspace_initializer.py
dayu/web/: README.md  __init__.py  __main__.py  streamlit_app.py
dayu/wechat/: __init__.py  arg_parsing.py  daemon.py  main.py  runtime.py  service_manager.py  state_store.py
docs/: TODO.md  ci.md  code_review.md  code_review_fixer.md  conversation_memory_optimization.md  github_main_workflow.md
tests/: README.md  __init__.py  conftest.py  test_build_offline_bundle.py  test_process_liveness.py  test_workspace_paths.py
tests/application/: __init__.py  (+50 more)
utils/: analyze_tool_trace.py  build_offline_bundle.py  reproduce_dayu_cli_first_run_pyspy.sh  smoke_test_offline_bundle.py
(+192 files in other folders)
