[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dayu-agent"
version = "0.1.2"
description = "大愚 Agent：每个投资者的助理分析师"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Leo Liu" }]
keywords = [
    "agent",
    "llm",
    "financial-analysis",
    "sec",
    "edgar",
    "xbrl",
    "buy-side",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Chinese (Simplified)",
]

# 运行依赖：与 requirements.txt 的“生产依赖”段保持一致。
dependencies = [
    "requests>=2.32.2",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.3",
    "PyYAML>=6.0.2",
    # `trafilatura>=1.12.0` 已要求 `charset-normalizer>=3.2.0`；
    # `aiohttp 3.8.x` 仍把其限制在 `<3.0`，该组合不存在可解最小环境。
    "aiohttp>=3.9.0",
    "prompt_toolkit>=3.0.0",
    "fastapi>=0.115.0",
    "edgartools>=5.30.0",
    # 当前项目正式支持的 Docling 基线直接收敛到 2.90+，避免继续承诺
    # 已不打算维护的更低版本区间。
    "docling>=2.90.0,<3.0.0",
    "docling-core>=2.74.0,<3.0.0",
    # pandas 下界需与 docling / docling-core 当前依赖树保持一致，
    # 上界维持在当前 3.x 生态窗口内，避免把 4.x 误声明为支持范围。
    "pandas>=2.1.4,<4.0.0",
    "lxml>=5.2.2",
    "click>=8.1.0",
    "trafilatura>=1.12.0",
    "readability-lxml>=0.8.1",
    "markdownify>=0.13.1",
    "html2text>=2024.2.26",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
# 浏览器回退抓取：安装后需额外执行 `playwright install chromium`。
browser = [
    "playwright>=1.40.0",
    # 当前代码直接从包根导入 `Stealth`，该符号在 1.x 包根未稳定导出。
    "playwright-stealth>=2.0.3",
]
# 测试与静态检查工具链。
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    "requests-mock>=1.11.0",
]
dev = [
    "mypy>=1.5.0",
    "pyright>=1.1.0",
    "ruff>=0.0.290",
    "black>=23.7.0",
]

[project.urls]
Homepage = "https://github.com/noho/dayu-agent"
Repository = "https://github.com/noho/dayu-agent"
Issues = "https://github.com/noho/dayu-agent/issues"

[project.scripts]
dayu-cli = "dayu.cli.main:main"
dayu-wechat = "dayu.wechat.main:main"
dayu-render = "dayu.render.render:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dayu*"]
exclude = [
    "tests*",
    "utils*",
    "docs*",
    "workspace*",
    "ref*",
    "internel*",
]

[tool.setuptools.package-data]
# 随包分发的默认配置、prompts 模板等非 .py 资源。
"dayu.config" = [
    "*.json",
    "prompts/**/*.md",
    "prompts/**/*.json",
    "prompts/**/*.yaml",
]
"dayu.assets" = [
    "*.md",
]
"dayu.render" = [
    "*.css",
    "*.html",
    "*.lua",
    "*.docx",
    "*.xlsx",
    "*.mmd",
]

[tool.pytest.ini_options]
# 具体 pytest 设置见 pytest.ini（保留为单一事实源）。
minversion = "7.4"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]
